--- a/CSS/Practica de figuras 37 - 40/main.css
+++ b/CSS/Practica de figuras 37 - 40/main.css
@@ -43,13 +43,14 @@ body{
     margin: auto;
     padding: 10px;
     overflow: hidden;
-    display: flex;
+    max-width: 1000px;
+    /*display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
 }
 
 .box{
-    width: 340px;
+    width: 30%;
     height: 600px;
     border: 3px solid #253062;
     border-radius: 10px;
@@ -97,4 +98,46 @@ body{
     margin: 5px;
     border-style: none;
     border-radius: 10px;
+}
+
+.box-main__btn:hover{
+    background-color: #1b2550;
+    cursor: pointer;
+}
+
+.box-main__btn:active{
+    background-color: #4c5580;
+}
+
+/*Responsive*/
+@media screen and (max-width:1021px){
+    .figures{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:800px){
+    .box{
+        margin: 10px;
+    }
+}
+
+@media screen and (max-width:640px){
+    .box{
+        width: 90%;
+        margin: 25px;
+        height: auto;
+    }
+}
+
+@media screen and (max-width:360px){
+    .box{
+        width: 90%;
+        margin: 25px;
+        height: auto;
+    }
+
+    .answer p{
+        font-size: 20px;
+    }
 }
